<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login-test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Signed out</string>
    <string name="token">Token String</string>
    <string name="action_settings">Settings</string>
    <string name="revoke">Revoke access</string>
    <string name="sign_out">Sign out</string>
    <string name="rest">Rest result</string>
    <string name="network_error">You\'re not connected to a network!</string>

</resources>
