<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.namiskuukkel.login_test.MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status" />
    <TextView
        android:text="@string/token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/token" />
    <TextView
        android:text="@string/rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rest_result" />

    <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/revoke_access_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/revoke"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"/>

</LinearLayout>
